# MizzouMenuHelper

./: INSTALL.md  PROJECT_OVERVIEW.md  QUICKREF.md  README.md  build.sh  edu.missouri.dining.appdata.xml  edu.missouri.dining.desktop.in  meson.build  mizzou-dining.css  mizzou-dining.gresource.xml  mizzou-dining.vala
